[package]
name = "rust-hashcash"
version = "0.1.0"
authors = ["Drazen Urch <drazen@urch.eu>"]
edition = "2018"
license = "MIT"
documentation = "https://durch.github.io/rust-hashcash/hashcash/"
description = "Rust hashcash algorithm implementation with sha3 support"
keywords = ["hashcash", "sha3", "sha1"]



[lib]
name = "hashcash"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.11"
rand = "0.7.3"
rust-crypto = "0.2.36"
simpl = "0.1"
log = "0.4.8"

[features]
sha1 = []